--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,17 +1,25 @@
 @import "./reset.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
 //Components
 @import "./components/nav-bar.scss";
 @import "./components/screensize.scss";
 @import "./components/status-bar.scss";
+@import "./components/btn.scss";
 //Screens
 @import "./screens/index.scss";
 @import "./screens/termsofagree.scss";
 @import "./screens/signup.scss";
 @import "./screens/main.scss";
-
+@import "./screens/search.scss";
+@import "./screens/rating.scss";
+@import "./screens/errandongoing.scss";
+@import "./screens/errandconfirm.scss";
+@import "./screens/cartegory.scss";
+@import "./screens/errandmake.scss";
+    
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poor Story', cursive;
     background-color:  white;
     
 }
