--- a/scss/components/btn.scss
+++ b/scss/components/btn.scss
@@ -76,3 +76,17 @@
     flex-direction:column;
     margin: 0px 30px;
 }
+#profileBttn{
+    cursor: pointer;
+    font-size:18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color:#ebcb47;
+    padding: 0.3em 2.0em 0.3em;
+    color: white;
+    line-height: 1.5;
+    flex-direction:column;
+    margin: 10px 190px;
+    position: relative;
+}
