--- a/scss/components/nav-bar.scss
+++ b/scss/components/nav-bar.scss
@@ -17,7 +17,7 @@
 }
 .nav__circle{
     position: absolute;
-    left: -26px;
+    left: -30px;
     bottom: -45px;
     border-radius: 50%;
     width: 125px;
@@ -33,3 +33,34 @@
     align-items: center;
     font-weight: 100;
 }
+.nav1{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #11234b;
+    padding: 0px 50px;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(121 , 121, 121, 0.3);
+}
+
+.nav__list1{
+    display: flex;
+}
+.nav__btn1{
+    position: relative;
+    margin: 10px 0px;
+    padding: 10px 1px;
+}
+.nav__btn2{
+    position: relative;
+    margin: 20px 50px;
+    padding: 1px 27px;
+}
+.nav__btn3{
+    position: relative;
+    margin: 21px 73px;
+}
+.nav__btn4{
+    position: relative;
+    margin: 21px 2px;
+} 
