--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,6 +20,9 @@
 @import "./screens/errandmake.scss";
 @import "./screens/profilesetting.scss";
 @import "./screens/mypage.scss";
+@import "./screens/errandlist.scss";
+@import "./screens/ternsofservice.scss";
+@import "./screens/ask.scss";
     
 body{
     font-family: 'Poor Story', cursive;
