--- a/scss/components/status-bar.scss
+++ b/scss/components/status-bar.scss
@@ -1,9 +1,13 @@
 .status-bar{
+    position: fixed;
+    width: 100%;
+    top: 0;
     display: flex;
     justify-content:space-between;
     padding:5px 3px;
+    z-index: 1;
     background-color: #11234b;
-    height: 30px;
+    height: 35px;
 }
 .status-bar__column{
     display: flex;
