--- a/scss/components/errandform.scss
+++ b/scss/components/errandform.scss
@@ -3,6 +3,7 @@
     padding: 25px 5px;
     border: 2px solid #11234b;
     position: relative;
+    box-shadow: 5px 5px 10px -1px #11234b;
 }
 
 .form-errand:hover:before {
@@ -35,6 +36,7 @@
     padding: 25px 5px;
     border: 2px solid #11234b;
     position: relative;
+    box-shadow: 5px 5px 10px -1px #11234b;
 }
 
 .main_errand_box:hover:before {
@@ -54,6 +56,7 @@
 .errand_name{
     font-size: 30px;
     margin: 10px 10px;
+    
 }
 .errand_detail{
     font-size: 18px;
