--- a/scss/components/btn.scss
+++ b/scss/components/btn.scss
@@ -16,6 +16,7 @@
     line-height: 1.5;
     flex-direction:column;
     margin: 0px 30px;
+    box-shadow: 5px 5px 10px -1px #ebcb47;
 }
 
 #agreeBtn{
@@ -29,6 +30,7 @@
     line-height: 1.5;
     flex-direction:column;
     margin: 0px 30px;
+    box-shadow: 5px 5px 10px -1px #ebcb47;
 }
 #disagreeBtn{
     font-size:18px;
@@ -41,8 +43,19 @@
     line-height: 1.5;
     flex-direction:column;
     margin: 0px 30px;
+    box-shadow: 5px 5px 10px -1px #11234b;
 }
 .agrBtn{
+    margin: 70px 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 600;
+    font-size:smaller;
+    box-shadow: 5px 5px 10px -1px #ebcb47;
+}
+.agrBtn1{
     margin: 70px 10px;
     text-align: center;
     display: flex;
@@ -63,6 +76,7 @@
     line-height: 1.5;
     flex-direction:column;
     margin: 0px 30px;
+    box-shadow: 5px 5px 10px -1px #11234b;
 }
 #okBtn{
     font-size:18px;
@@ -75,6 +89,7 @@
     line-height: 1.5;
     flex-direction:column;
     margin: 0px 30px;
+    box-shadow: 5px 5px 10px -1px #ebcb47;
 }
 #profileBttn{
     cursor: pointer;
@@ -88,4 +103,5 @@
     flex-direction:column;
     margin: 10px 190px;
     position: relative;
+    box-shadow: 5px 5px 10px -1px #ebcb47;
 }
