errand_scss_finalfinalfinal

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,7 @@ table {
 
 .form-errand:hover:before {
   border-top: 15px solid #11234b;
+  box-shadow: 5px 5px 10px -1px #11234b;
 }
 
 .form-errand:before {
@@ -273,6 +274,7 @@ table {
   right: 0;
   border-top: 30px solid #11234b;
   border-left: 30px solid rgba(0, 0, 0, 0);
+  box-shadow: 5px 5px 10px -1px #11234b;
   width: 0;
 }
 
@@ -296,6 +298,7 @@ table {
 
 .main_errand_box:hover:before {
   border-top: 15px solid #11234b;
+  box-shadow: 5px 5px 10px -1px #11234b;
 }
 
 .main_errand_box:before {
@@ -305,6 +308,7 @@ table {
   right: 0;
   border-top: 30px solid #11234b;
   border-left: 30px solid rgba(0, 0, 0, 0);
+  box-shadow: 5px 5px 10px -1px #11234b;
   width: 0;
 }
 
